[package]
name = "dfs-common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
tonic = "0.12"
prost = "0.13"
anyhow = "1.0"
lru = "0.13"
ureq = "3.0"
hex = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-vendored", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio-util = "0.7"
mime_guess = "2.0"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12" 