 [package]
name = "dfs-winfsp"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
md-5 = "0.10"
rand = "0.9"
async-trait = "0.1"
futures = "0.3"
winfsp = { version = "0.11.0", default-features = false, features = ["stable"] }
dfs-common = { path = "../common" }

[dev-dependencies]
env_logger = "0.11"
